force-app/main/default/objects/Lead/fields/Annual_Consumption_primary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumption_primary__c</fullName>
    <label>Annual Consumption primary</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>