force-app/main/default/objects/Lead/fields/Product_W2L__c.field-meta.xml
<CustomField>
    <fullName>Product_W2L__c</fullName>
    <label>Product W2L</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iodine</fullName>
            </value>
            <value>
                <fullName>Lithium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>