force-app/main/default/objects/Lead/fields/Unconverted_lead_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Unconverted_lead_Reasons__c</fullName>
    <inlineHelpText>This fields defines the loss reason for a lead</inlineHelpText>
    <label>Unconverted lead Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Without inventory</fullName>
            </value>
            <value>
                <fullName>Unqualifed product</fullName>
            </value>
            <value>
                <fullName>Customer does not comply SQM polices</fullName>
            </value>
            <value>
                <fullName>Customer has a supplier</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Cliente no sigue políticas de SQM</fullName>
                <isActive>false</isActive>
                <label>Cliente no sigue políticas de SQM</label>
            </value>
            <value>
                <fullName>Cliente tiene otro proveedor</fullName>
                <isActive>false</isActive>
                <label>Cliente tiene otro proveedor</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <isActive>false</isActive>
                <label>Otros</label>
            </value>
            <value>
                <fullName>Producto no clasificado</fullName>
                <isActive>false</isActive>
                <label>Producto no clasificado</label>
            </value>
            <value>
                <fullName>Producto sin stock</fullName>
                <isActive>false</isActive>
                <label>Producto sin stock</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>