force-app/main/default/objects/Lead/validationRules/Valida_MobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_MobilePhone</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(MobilePhone )) &amp;&amp;
LEFT(MobilePhone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>The phone number must begin with the &quot;+&quot; character</errorMessage>
</ValidationRule>