force-app/main/default/objects/Lead/validationRules/Valida_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Phone</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Phone)) &amp;&amp;
LEFT(Phone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>The phone number must begin with the &quot;+&quot; character</errorMessage>
</ValidationRule>